# polymarket-quant

./: .env.example  .gitignore  CODEBASE_OVERVIEW.md  COMMEND.md  README.md  TASK.md  pyproject.toml
configs/: base.yaml
scripts/: backfill_resolutions.py  build_event_state.py  build_market_state.py  build_transition_targets.py  check_capture_continuity.py  collect_orderbooks.py  collect_resolutions.py  collect_spot_prices.py  fit_transition_model.py  replay_edge_strategy.py  replay_pricing.py  run_backtest.py  run_ingestion.py  run_live_signal_loop.py  run_mispricing_detector.py  run_mm_sim.py  run_paper_trading_executor.py  run_textual_dashboard.py  run_window_capture.py  study_jump_sensitivity.py  train_calibration.py  windowing.py
src/polymarket_quant/: __init__.py
src/polymarket_quant/backtest/: engine.py
src/polymarket_quant/calibration/: __init__.py  calibrator.py  models.py
src/polymarket_quant/dashboard/: __init__.py  data.py  runtime.py  textual_app.py
src/polymarket_quant/evaluation/: edge_strategy.py  metrics.py  mm_metrics.py
src/polymarket_quant/execution/: __init__.py  market_maker.py  (+3 more)
tests/: test_check_capture_continuity.py  test_collect_orderbooks.py  test_collect_spot_prices.py  test_dashboard_runtime.py  test_edge_strategy.py  test_execution.py  test_ingestion.py  test_live_capture.py  test_live_dashboard.py  test_market_state.py  test_markov_simulation.py  test_mispricing.py  test_pricing_models.py  test_replay_pricing.py  test_schemas.py  test_spot.py  test_study_jump_sensitivity.py  test_transition_model.py  test_transition_targets.py
(+34 files in other folders)
